--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 title: Sonya Gopinath
-description: Economist & Sustainability Analyst Portfolio
+description: Portfolio
 theme: jekyll-theme-minimal
